# Inference_libtorch

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
nanodet_ncnn_independent/: CMakeLists.txt  build.sh  inference.sh  main.cpp  nanodet.cpp  nanodet.h  timer.cpp  video.sh  webcam.sh
python/: TorchLoadTest.py  TransferModel.py  nanodet-m.pth
src/: draw.cpp  draw.h  main.cpp  nanodet.cpp  nanodet.h  timer.cpp  timer.h
